# habit-track

backend/: .env  Cargo.toml  README.md
backend/migrations/: 20250908130504_create_habits_tables.sql
backend/src/: auth.rs  db.rs  handlers.rs  handlers_new.rs  main.rs  models.rs
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts  auth.interceptor.ts
frontend/src/app/components/habit-form/: habit-form.component.css  habit-form.component.html  habit-form.component.ts
frontend/src/app/components/habit-list/: habit-list.component.css  habit-list.component.html  habit-list.component.ts
frontend/src/app/components/habit-progress/: habit-progress.component.css  habit-progress.component.html  habit-progress.component.ts
frontend/src/app/components/login/: login.component.css  login.component.html  login.component.ts
frontend/src/app/components/navbar/: navbar.component.css  navbar.component.html  navbar.component.ts
frontend/src/app/components/signup/: signup.component.css  signup.component.html  signup.component.ts
frontend/src/app/models/: habit.model.ts  user.model.ts
frontend/src/app/services/: auth.service.ts  habit.service.ts
