[package]
name = "habit-track"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.2"
dotenv = "0.15"
tokio = { version = "1.35", features = ["full"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
